Add remaining site

--- a/Root/IE104.CK/courses-type/course-type.html
+++ b/Root/IE104.CK/courses-type/course-type.html
@@ -3,10 +3,11 @@
 <head>
 <meta charset="utf-8">
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Untitled Document</title>
+<title>Khoá học HTML</title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->
-<link rel="stylesheet" href="">
+<link rel="stylesheet" href="styles/styles_ct.css">
+<script src="js/script.js"></script>
 <!-- InstanceEndEditable -->
 <link rel="stylesheet" href="../fontawesome/css/all.css">
 <link rel="stylesheet" href="../styles/styles_template.css">
@@ -15,13 +16,13 @@
 <body>
 <header>
   <nav id="container">
-    <div id="logo" > <a href="index.html" > <img src="../images/logo.png"> </a> </div>
+    <div id="logo" > <a href="../index.html" > <img src="../images/logo.png"> </a> </div>
     <ul id="main-menu">
-      <li><a class="main_nav" href="home.html">Trang chủ</a></li>
-      <li><a class="main_nav" href="../khoahoc/index.html">Khóa học</a></li>
+      <li><a class="main_nav" href="../index.html">Trang chủ</a></li>
+      <li><a class="main_nav" href="../courses/index.html">Khóa học</a></li>
       <li><a class="main_nav" href="">Thông báo</a></li>
-      <li><a class="main_nav" href="../login/index.html">Đăng nhập</a></li>
-      <li><a class="main_nav" href="../register/index.html">Đăng ký</a></li>
+      <li><a class="main_nav" href="../log-in/index.html">Đăng nhập</a></li>
+      <li><a class="main_nav" href="../sign-up/index.html">Đăng ký</a></li>
       <li><img src="../images/no_avata.jfif"></li>
       <li><i class="fas fa-align-justify" id="fas"></i>
         <ul class="sub-menu">
@@ -33,7 +34,193 @@
 </header>
 	
 <!-- InstanceBeginEditable name="EditRegion3" -->
-EditRegion3
+<h2 id="title">Các khoá học HTML</h2>
+<div id="main_page">
+  <div id="html1" class="box"> <img src="../images/html.png">
+    <div class="info">
+      <h3>Khóa học HTML dành cho người mới</h3>
+      <p>Phạm Thùy Dung</p>
+      <p>844 người đang học</p>
+      <div class="cost">444.444đ</div>
+    </div>
+    <div class=" detail">
+      <h3>Bạn có thể học được</h3>
+      <ul>
+        <li>Nhận các chủ đề được giới thiệu như Internet, Tên miền, Địa chỉ IP và các trình duyệt.</li>
+        <li> Cài đặt Visual Studio Code vào hệ thống.</li>
+        <li>Tìm hiểu Kiến thức cơ bản về HTML với các ví dụ.</li>
+      </ul>
+    </div>
+  </div>
+	<div class="box"> <img src="../images/html2.jfif">
+    <div class="info">
+      <h3>HTML cấp tốc</h3>
+      <p> Nguyễn Huy Khoa</p>
+      <p> 844 người đang học</p>
+      <div class="cost"> 444.444đ</div>
+    </div>
+    <div class=" detail">
+      <h3>Bạn có thể học được</h3>
+      <ul>
+        <li>Nhận các chủ đề được giới thiệu như Internet, Tên miền, Địa chỉ IP và các trình duyệt.</li>
+        <li> Cài đặt Visual Studio Code vào hệ thống.</li>
+        <li>Tìm hiểu Kiến thức cơ bản về HTML với các ví dụ.</li>
+      </ul>
+    </div>
+  </div><div class="box"> <img src="../images/html.png">
+    <div class="info">
+      <h3>Khóa học HTML dành cho người mới</h3>
+      <p> Nguyễn Huy Khoa</p>
+      <p> 844 người đang học</p>
+      <div class="cost"> 444.444đ</div>
+    </div>
+    <div class=" detail">
+      <h3>Bạn có thể học được</h3>
+      <ul>
+        <li>Nhận các chủ đề được giới thiệu như Internet, Tên miền, Địa chỉ IP và các trình duyệt.</li>
+        <li> Cài đặt Visual Studio Code vào hệ thống.</li>
+        <li>Tìm hiểu Kiến thức cơ bản về HTML với các ví dụ.</li>
+      </ul>
+    </div>
+  </div><div class="box"> <img src="../images/html.png">
+    <div class="info">
+      <h3>Khóa học HTML dành cho người mới</h3>
+      <p> Nguyễn Huy Khoa</p>
+      <p> 844 người đang học</p>
+      <div class="cost"> 444.444đ</div>
+    </div>
+    <div class=" detail">
+      <h3>Bạn có thể học được</h3>
+      <ul>
+        <li>Nhận các chủ đề được giới thiệu như Internet, Tên miền, Địa chỉ IP và các trình duyệt.</li>
+        <li> Cài đặt Visual Studio Code vào hệ thống.</li>
+        <li>Tìm hiểu Kiến thức cơ bản về HTML với các ví dụ.</li>
+      </ul>
+    </div>
+  </div><div class="box"> <img src="../images/html.png">
+    <div class="info">
+      <h3>Khóa học HTML dành cho người mới</h3>
+      <p> Nguyễn Huy Khoa</p>
+      <p> 844 người đang học</p>
+      <div class="cost"> 444.444đ</div>
+    </div>
+    <div class=" detail">
+      <h3>Bạn có thể học được</h3>
+      <ul>
+        <li>Nhận các chủ đề được giới thiệu như Internet, Tên miền, Địa chỉ IP và các trình duyệt.</li>
+        <li> Cài đặt Visual Studio Code vào hệ thống.</li>
+        <li>Tìm hiểu Kiến thức cơ bản về HTML với các ví dụ.</li>
+      </ul>
+    </div>
+  </div><div class="box"> <img src="../images/html.png">
+    <div class="info">
+      <h3>Khóa học HTML dành cho người mới</h3>
+      <p> Nguyễn Huy Khoa</p>
+      <p> 844 người đang học</p>
+      <div class="cost"> 444.444đ</div>
+    </div>
+    <div class=" detail">
+      <h3>Bạn có thể học được</h3>
+      <ul>
+        <li>Nhận các chủ đề được giới thiệu như Internet, Tên miền, Địa chỉ IP và các trình duyệt.</li>
+        <li> Cài đặt Visual Studio Code vào hệ thống.</li>
+        <li>Tìm hiểu Kiến thức cơ bản về HTML với các ví dụ.</li>
+      </ul>
+    </div>
+  </div><div class="box"> <img src="../images/html.png">
+    <div class="info">
+      <h3>Khóa học HTML dành cho người mới</h3>
+      <p> Nguyễn Huy Khoa</p>
+      <p> 844 người đang học</p>
+      <div class="cost"> 444.444đ</div>
+    </div>
+    <div class=" detail">
+      <h3>Bạn có thể học được</h3>
+      <ul>
+        <li>Nhận các chủ đề được giới thiệu như Internet, Tên miền, Địa chỉ IP và các trình duyệt.</li>
+        <li> Cài đặt Visual Studio Code vào hệ thống.</li>
+        <li>Tìm hiểu Kiến thức cơ bản về HTML với các ví dụ.</li>
+      </ul>
+    </div>
+  </div><div class="box"> <img src="../images/html.png">
+    <div class="info">
+      <h3>Khóa học HTML dành cho người mới</h3>
+      <p> Nguyễn Huy Khoa</p>
+      <p> 844 người đang học</p>
+      <div class="cost"> 444.444đ</div>
+    </div>
+    <div class=" detail">
+      <h3>Bạn có thể học được</h3>
+      <ul>
+        <li>Nhận các chủ đề được giới thiệu như Internet, Tên miền, Địa chỉ IP và các trình duyệt.</li>
+        <li> Cài đặt Visual Studio Code vào hệ thống.</li>
+        <li>Tìm hiểu Kiến thức cơ bản về HTML với các ví dụ.</li>
+      </ul>
+    </div>
+  </div><div class="box"> <img src="../images/html.png">
+    <div class="info">
+      <h3>Khóa học HTML dành cho người mới</h3>
+      <p> Nguyễn Huy Khoa</p>
+      <p> 844 người đang học</p>
+      <div class="cost"> 444.444đ</div>
+    </div>
+    <div class=" detail">
+      <h3>Bạn có thể học được</h3>
+      <ul>
+        <li>Nhận các chủ đề được giới thiệu như Internet, Tên miền, Địa chỉ IP và các trình duyệt.</li>
+        <li> Cài đặt Visual Studio Code vào hệ thống.</li>
+        <li>Tìm hiểu Kiến thức cơ bản về HTML với các ví dụ.</li>
+      </ul>
+    </div>
+  </div><div class="box"> <img src="../images/html.png">
+    <div class="info">
+      <h3>Khóa học HTML dành cho người mới</h3>
+      <p> Nguyễn Huy Khoa</p>
+      <p> 844 người đang học</p>
+      <div class="cost"> 444.444đ</div>
+    </div>
+    <div class=" detail">
+      <h3>Bạn có thể học được</h3>
+      <ul>
+        <li>Nhận các chủ đề được giới thiệu như Internet, Tên miền, Địa chỉ IP và các trình duyệt.</li>
+        <li> Cài đặt Visual Studio Code vào hệ thống.</li>
+        <li>Tìm hiểu Kiến thức cơ bản về HTML với các ví dụ.</li>
+      </ul>
+    </div>
+  </div>
+  <div class="box"> <img src="../images/html.png">
+    <div class="info">
+      <h3>Khóa học HTML dành cho người mới</h3>
+      <p> Nguyễn Huy Khoa</p>
+      <p> 844 người đang học</p>
+      <div class="cost"> 444.444đ</div>
+    </div>
+    <div class=" detail">
+      <h3>Bạn có thể học được</h3>
+      <ul>
+        <li>Nhận các chủ đề được giới thiệu như Internet, Tên miền, Địa chỉ IP và các trình duyệt.</li>
+        <li> Cài đặt Visual Studio Code vào hệ thống.</li>
+        <li>Tìm hiểu Kiến thức cơ bản về HTML với các ví dụ.</li>
+      </ul>
+    </div>
+  </div>
+  <div class="box"> <img src="../images/html.png">
+    <div class="info">
+      <h3>Khóa học HTML dành cho người mới</h3>
+      <p> Nguyễn Huy Khoa</p>
+      <p> 844 người đang học</p>
+      <div class="cost"> 444.444đ</div>
+    </div>
+    <div class=" detail">
+      <h3>Bạn có thể học được</h3>
+      <ul>
+        <li>Nhận các chủ đề được giới thiệu như Internet, Tên miền, Địa chỉ IP và các trình duyệt.</li>
+        <li> Cài đặt Visual Studio Code vào hệ thống.</li>
+        <li>Tìm hiểu Kiến thức cơ bản về HTML với các ví dụ.</li>
+      </ul>
+    </div>
+  </div>
+</div>
 <!-- InstanceEndEditable -->
 	
 <footer class="footer">
@@ -48,13 +235,13 @@ EditRegion3
   <div class="footer2">
     <h3 class="h3white">CÁC KHOÁ HỌC</h3>
     <ul class="list">
-      <li><a class="link" href="index.html">HTML</a></li>
+      <li><a class="link" href="course-type.html">HTML</a></li>
       <hr class="line">
-      <li><a class="link" href="index.html">CSS</a></li>
+      <li><a class="link" href="">CSS</a></li>
       <hr class="line">
-      <li><a class="link" href="login/index.html">Javascript</a></li>
+      <li><a class="link" href="">Javascript</a></li>
       <hr class="line">
-      <li><a class="link" href="register/index.html">JQuery</a></li>
+      <li><a class="link" href="">JQuery</a></li>
       <hr class="line">
       <li><a class="link" href="">PHP</a></li>
     </ul>
@@ -85,4 +272,7 @@ EditRegion3
   </div>
 </footer>
 </body>
+<!-- InstanceBeginEditable name="script" -->
+<script src="js/script.js"></script>
+<!-- InstanceEndEditable -->
 <!-- InstanceEnd --></html>
