--- a/Root/IE104.CK/forgot_password/index.html
+++ b/Root/IE104.CK/forgot_password/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Untitled Document</title>
+<title>Quên mật khẩu</title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->
 <link rel="stylesheet" href="../fontawesome/css/all.css">
@@ -15,13 +15,13 @@
 <body>
 <header>
   <nav id="container">
-    <div id="logo" > <a href="index.html" > <img src="../images/logo.png"> </a> </div>
+    <div id="logo" > <a href="../index.html" > <img src="../images/logo.png"> </a> </div>
     <ul id="main-menu">
-      <li><a class="main_nav" href="home.html">Trang chủ</a></li>
-      <li><a class="main_nav" href="../khoahoc/index.html">Khóa học</a></li>
+      <li><a class="main_nav" href="../index.html">Trang chủ</a></li>
+      <li><a class="main_nav" href="../courses/index.html">Khóa học</a></li>
       <li><a class="main_nav" href="">Thông báo</a></li>
-      <li><a class="main_nav" href="../login/index.html">Đăng nhập</a></li>
-      <li><a class="main_nav" href="../register/index.html">Đăng ký</a></li>
+      <li><a class="main_nav" href="../log-in/index.html">Đăng nhập</a></li>
+      <li><a class="main_nav" href="../sign-up/index.html">Đăng ký</a></li>
       <li><img src="../images/no_avata.jfif"></li>
       <li><i class="fas fa-align-justify" id="fas"></i>
         <ul class="sub-menu">
@@ -33,24 +33,19 @@
 </header>
 	
 <!-- InstanceBeginEditable name="EditRegion3" -->
-	<div id="wrapper">
-    <div id="main">
-     <h1>Forgot password</h1>
+<div id="wrapper">
+  <div id="main">
+    <h1>Forgot password</h1>
     <div class="form-group">
-    <input type="email" name="email" class="form-input" placeholder="Nhập e-mail">
+      <input type="email" name="email" class="form-input" placeholder="Nhập e-mail">
     </div>
     <div class="form-group">
-    <input type="password" name="MK" class="form-input" placeholder="Mật khẩu mới">
+      <input type="password" name="MK" class="form-input" placeholder="Mật khẩu mới">
     </div>
     <input type="submit"  class="form-submit" name="submit" value="Xác nhận" >
-    </div>
-    <div id="after">
-    <span>Bạn đã có tài khoản</span> 
-    <a href="../login/index.html">Log In</a>
-    </div>
-    </div>
+  </div>
+  <div id="after"> <span>Bạn đã có tài khoản</span> <a href="../log-in/index.html">Log In</a> </div>
 </div>
-
 <!-- InstanceEndEditable -->
  
 </body>
