--- a/Root/IE104.CK/index.html
+++ b/Root/IE104.CK/index.html
@@ -17,11 +17,11 @@
   <nav id="container">
     <div id="logo" > <a href="index.html" > <img src="images/logo.png"> </a> </div>
     <ul id="main-menu">
-      <li><a class="main_nav" href="home.html">Trang chủ</a></li>
-      <li><a class="main_nav" href="khoahoc/index.html">Khóa học</a></li>
+      <li><a class="main_nav" href="index.html">Trang chủ</a></li>
+      <li><a class="main_nav" href="courses/index.html">Khóa học</a></li>
       <li><a class="main_nav" href="">Thông báo</a></li>
-      <li><a class="main_nav" href="login/index.html">Đăng nhập</a></li>
-      <li><a class="main_nav" href="register/index.html">Đăng ký</a></li>
+      <li><a class="main_nav" href="log-in/index.html">Đăng nhập</a></li>
+      <li><a class="main_nav" href="sign-up/index.html">Đăng ký</a></li>
       <li><img src="images/no_avata.jfif"></li>
       <li><i class="fas fa-align-justify" id="fas"></i>
         <ul class="sub-menu">
@@ -125,13 +125,13 @@
   <div class="footer2">
     <h3 class="h3white">CÁC KHOÁ HỌC</h3>
     <ul class="list">
-      <li><a class="link" href="index.html">HTML</a></li>
+      <li><a class="link" href="courses-type/course-type.html">HTML</a></li>
       <hr class="line">
-      <li><a class="link" href="index.html">CSS</a></li>
+      <li><a class="link" href="">CSS</a></li>
       <hr class="line">
-      <li><a class="link" href="login/index.html">Javascript</a></li>
+      <li><a class="link" href="">Javascript</a></li>
       <hr class="line">
-      <li><a class="link" href="register/index.html">JQuery</a></li>
+      <li><a class="link" href="">JQuery</a></li>
       <hr class="line">
       <li><a class="link" href="">PHP</a></li>
     </ul>
@@ -162,4 +162,7 @@
   </div>
 </footer>
 </body>
+<!-- InstanceBeginEditable name="script" -->
+	script
+<!-- InstanceEndEditable -->
 <!-- InstanceEnd --></html>
