--- a/Root/IE104.CK/lecturer-detail/lecturer-detail.html
+++ b/Root/IE104.CK/lecturer-detail/lecturer-detail.html
@@ -16,13 +16,13 @@
 <body>
 <header>
   <nav id="container">
-    <div id="logo" > <a href="index.html" > <img src="../images/logo.png"> </a> </div>
+    <div id="logo" > <a href="../index.html" > <img src="../images/logo.png"> </a> </div>
     <ul id="main-menu">
-      <li><a class="main_nav" href="home.html">Trang chủ</a></li>
-      <li><a class="main_nav" href="../khoahoc/index.html">Khóa học</a></li>
+      <li><a class="main_nav" href="../index.html">Trang chủ</a></li>
+      <li><a class="main_nav" href="../courses/index.html">Khóa học</a></li>
       <li><a class="main_nav" href="">Thông báo</a></li>
-      <li><a class="main_nav" href="../login/index.html">Đăng nhập</a></li>
-      <li><a class="main_nav" href="../register/index.html">Đăng ký</a></li>
+      <li><a class="main_nav" href="../log-in/index.html">Đăng nhập</a></li>
+      <li><a class="main_nav" href="../sign-up/index.html">Đăng ký</a></li>
       <li><img src="../images/no_avata.jfif"></li>
       <li><i class="fas fa-align-justify" id="fas"></i>
         <ul class="sub-menu">
@@ -38,13 +38,13 @@
     <h2>Giảng viên</h2>
     <h1 id="lecturer_name">Phạm Thùy Dung</h1>
     <h2 id="subtitle">Full-stack Developer</h2>
-    <p>Số khoá học: 7</p>
+    <p>Số khoá học: 6</p>
     <p>Số học viên: 24.513</p>
     <p>Thời gian tham gia: 9/1/2020</p>
   </div>
   <div id="right_side"><img src="../images/hinh-anh-nguoi-mau.jpg"></div>
 </div>
-<div class="detail">
+<div id="detail">
   <h2>Giới thiệu bản thân</h2>
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc condimentum molestie felis, eu semper tellus hendrerit eu. Maecenas finibus, velit ut sagittis ullamcorper, purus nisl faucibus velit, ut consectetur nibh mauris a nibh. Nulla molestie gravida sem eget ullamcorper. Duis eu orci urna. Fusce aliquam, arcu sit amet mollis venenatis, ex massa tincidunt erat, et malesuada diam enim tincidunt elit. Phasellus gravida elementum nibh in maximus. Duis aliquet metus dolor, vitae imperdiet sapien malesuada vitae. Duis consectetur vestibulum facilisis. Cras et quam aliquet, dictum nibh vel, tempor mi. Donec porta placerat leo non eleifend. Nullam dapibus velit ante, a consectetur quam mattis quis. Nullam consequat, mi eu porttitor tempus, quam tellus tincidunt ligula, non auctor purus erat sit amet libero. Sed neque quam, lobortis et urna a, suscipit tempus ante. Nunc suscipit felis sed erat fringilla, sit amet accumsan felis mollis. Aenean id luctus libero, quis imperdiet lectus.</p>
   <p>Sed dolor nunc, varius a feugiat in, interdum et ante. Aenean vel lectus sit amet elit efficitur pellentesque. Sed consectetur mauris id orci fermentum volutpat. Curabitur accumsan massa nisi, at posuere lacus mattis ac. Morbi feugiat metus sit amet massa laoreet, at bibendum felis posuere. Suspendisse laoreet orci sed dui rhoncus, tempus sagittis enim accumsan. Morbi id viverra ipsum. Phasellus lacus felis, fringilla non fermentum id, semper in nibh.</p>
@@ -108,6 +108,104 @@
     </div>
   </div>
   <h2>Các khoá học</h2>
+  <div id="course">
+    <div id="html1" class="box"> <img src="../images/html.png">
+      <div class="info">
+        <h3>Khóa học HTML dành cho người mới</h3>
+        <p>Phạm Thùy Dung</p>
+        <p>844 người đang học</p>
+        <div class="cost">444.444đ</div>
+      </div>
+      <div class=" detail">
+        <h3>Bạn có thể học được</h3>
+        <ul>
+          <li>Nhận các chủ đề được giới thiệu như Internet, Tên miền, Địa chỉ IP và các trình duyệt.</li>
+          <li> Cài đặt Visual Studio Code vào hệ thống.</li>
+          <li>Tìm hiểu Kiến thức cơ bản về HTML với các ví dụ.</li>
+        </ul>
+      </div>
+    </div>
+    <div class="box"> <img src="../images/html2.jfif">
+      <div class="info">
+        <h3>HTML cấp tốc</h3>
+        <p> Nguyễn Huy Khoa</p>
+        <p> 8448 người đang học</p>
+        <div class="cost"> 567.890đ</div>
+      </div>
+      <div class=" detail">
+        <h3>Bạn có thể học được</h3>
+        <ul>
+          <li>Nhận các chủ đề được giới thiệu như Internet, Tên miền, Địa chỉ IP và các trình duyệt.</li>
+          <li> Cài đặt Visual Studio Code vào hệ thống.</li>
+          <li>Tìm hiểu Kiến thức cơ bản về HTML với các ví dụ.</li>
+        </ul>
+      </div>
+    </div>
+    <div class="box"> <img src="../images/html.png">
+      <div class="info">
+        <h3>HTML cấp tốc</h3>
+        <p> Nguyễn Huy Khoa</p>
+        <p> 844 người đang học</p>
+        <div class="cost"> 444.444đ</div>
+      </div>
+      <div class=" detail">
+        <h3>Bạn có thể học được</h3>
+        <ul>
+          <li>Nhận các chủ đề được giới thiệu như Internet, Tên miền, Địa chỉ IP và các trình duyệt.</li>
+          <li> Cài đặt Visual Studio Code vào hệ thống.</li>
+          <li>Tìm hiểu Kiến thức cơ bản về HTML với các ví dụ.</li>
+        </ul>
+      </div>
+    </div>
+    <div class="box"> <img src="../images/html.png">
+      <div class="info">
+        <h3>Khóa học HTML dành cho người mới</h3>
+        <p> Nguyễn Huy Khoa</p>
+        <p> 844 người đang học</p>
+        <div class="cost"> 444.444đ</div>
+      </div>
+      <div class=" detail">
+        <h3>Bạn có thể học được</h3>
+        <ul>
+          <li>Nhận các chủ đề được giới thiệu như Internet, Tên miền, Địa chỉ IP và các trình duyệt.</li>
+          <li> Cài đặt Visual Studio Code vào hệ thống.</li>
+          <li>Tìm hiểu Kiến thức cơ bản về HTML với các ví dụ.</li>
+        </ul>
+      </div>
+    </div>
+    <div class="box"> <img src="../images/html.png">
+      <div class="info">
+        <h3>HTML cấp tốc</h3>
+        <p> Nguyễn Huy Khoa</p>
+        <p> 844 người đang học</p>
+        <div class="cost"> 444.444đ</div>
+      </div>
+      <div class=" detail">
+        <h3>Bạn có thể học được</h3>
+        <ul>
+          <li>Nhận các chủ đề được giới thiệu như Internet, Tên miền, Địa chỉ IP và các trình duyệt.</li>
+          <li> Cài đặt Visual Studio Code vào hệ thống.</li>
+          <li>Tìm hiểu Kiến thức cơ bản về HTML với các ví dụ.</li>
+        </ul>
+      </div>
+    </div>
+    <div class="box"> <img src="../images/html.png">
+      <div class="info">
+        <h3>Khóa học HTML dành cho người mới</h3>
+        <p> Nguyễn Huy Khoa</p>
+        <p> 844 người đang học</p>
+        <div class="cost"> 444.444đ</div>
+      </div>
+      <div class=" detail">
+        <h3>Bạn có thể học được</h3>
+        <ul>
+          <li>Nhận các chủ đề được giới thiệu như Internet, Tên miền, Địa chỉ IP và các trình duyệt.</li>
+          <li> Cài đặt Visual Studio Code vào hệ thống.</li>
+          <li>Tìm hiểu Kiến thức cơ bản về HTML với các ví dụ.</li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </div>
 <!-- InstanceEndEditable -->
 <footer class="footer">
@@ -122,13 +220,13 @@
   <div class="footer2">
     <h3 class="h3white">CÁC KHOÁ HỌC</h3>
     <ul class="list">
-      <li><a class="link" href="index.html">HTML</a></li>
+      <li><a class="link" href="../courses-type/course-type.html">HTML</a></li>
       <hr class="line">
-      <li><a class="link" href="index.html">CSS</a></li>
+      <li><a class="link" href="">CSS</a></li>
       <hr class="line">
-      <li><a class="link" href="login/index.html">Javascript</a></li>
+      <li><a class="link" href="">Javascript</a></li>
       <hr class="line">
-      <li><a class="link" href="register/index.html">JQuery</a></li>
+      <li><a class="link" href="">JQuery</a></li>
       <hr class="line">
       <li><a class="link" href="">PHP</a></li>
     </ul>
@@ -159,5 +257,8 @@
   </div>
 </footer>
 </body>
+<!-- InstanceBeginEditable name="script" -->
+<script src="js/script.js"></script>
+<!-- InstanceEndEditable -->
 <!-- InstanceEnd -->
 </html>
