--- a/Root/IE104.CK/course-detail/course-detail.html
+++ b/Root/IE104.CK/course-detail/course-detail.html
@@ -15,13 +15,13 @@
 <body>
 <header>
   <nav id="container">
-    <div id="logo" > <a href="index.html" > <img src="../images/logo.png"> </a> </div>
+    <div id="logo" > <a href="../index.html" > <img src="../images/logo.png"> </a> </div>
     <ul id="main-menu">
-      <li><a class="main_nav" href="home.html">Trang chủ</a></li>
-      <li><a class="main_nav" href="../khoahoc/index.html">Khóa học</a></li>
+      <li><a class="main_nav" href="../index.html">Trang chủ</a></li>
+      <li><a class="main_nav" href="../courses/index.html">Khóa học</a></li>
       <li><a class="main_nav" href="">Thông báo</a></li>
-      <li><a class="main_nav" href="../login/index.html">Đăng nhập</a></li>
-      <li><a class="main_nav" href="../register/index.html">Đăng ký</a></li>
+      <li><a class="main_nav" href="../log-in/index.html">Đăng nhập</a></li>
+      <li><a class="main_nav" href="../sign-up/index.html">Đăng ký</a></li>
       <li><img src="../images/no_avata.jfif"></li>
       <li><i class="fas fa-align-justify" id="fas"></i>
         <ul class="sub-menu">
@@ -36,7 +36,7 @@
 <div id="title">
   <div id="title_detail">
     <div id="nav">
-      <p><a class="nav" href="">HTML</a> &#62 <a class="nav" href="">Khoá học HTML dành cho người mới</a></p>
+      <p><a class="nav" href="../courses-type/course-type.html">HTML</a> &#62 <a class="nav" href="">Khoá học HTML dành cho người mới</a></p>
     </div>
     <h2 id="course_name">Khoá học HTML dành cho người mới</h2>
     <h3 id="subtitle">Cung cấp kiến thức nền tảng về HTML</h3>
@@ -73,13 +73,13 @@
   <div class="footer2">
     <h3 class="h3white">CÁC KHOÁ HỌC</h3>
     <ul class="list">
-      <li><a class="link" href="index.html">HTML</a></li>
+      <li><a class="link" href="../courses-type/course-type.html">HTML</a></li>
       <hr class="line">
-      <li><a class="link" href="index.html">CSS</a></li>
+      <li><a class="link" href="">CSS</a></li>
       <hr class="line">
-      <li><a class="link" href="login/index.html">Javascript</a></li>
+      <li><a class="link" href="">Javascript</a></li>
       <hr class="line">
-      <li><a class="link" href="register/index.html">JQuery</a></li>
+      <li><a class="link" href="">JQuery</a></li>
       <hr class="line">
       <li><a class="link" href="">PHP</a></li>
     </ul>
@@ -110,4 +110,7 @@
   </div>
 </footer>
 </body>
+<!-- InstanceBeginEditable name="script" -->
+<script src="js/script.js"></script>
+<!-- InstanceEndEditable -->
 <!-- InstanceEnd --></html>
