--- a/Root/IE104.CK/sign-up/index.html
+++ b/Root/IE104.CK/sign-up/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Untitled Document</title>
+<title>Đăng ký</title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->
 <link rel="stylesheet" href="../fontawesome/css/all.css">
@@ -15,13 +15,13 @@
 <body>
 <header>
   <nav id="container">
-    <div id="logo" > <a href="index.html" > <img src="../images/logo.png"> </a> </div>
+    <div id="logo" > <a href="../index.html" > <img src="../images/logo.png"> </a> </div>
     <ul id="main-menu">
-      <li><a class="main_nav" href="home.html">Trang chủ</a></li>
-      <li><a class="main_nav" href="../khoahoc/index.html">Khóa học</a></li>
+      <li><a class="main_nav" href="../index.html">Trang chủ</a></li>
+      <li><a class="main_nav" href="../courses/index.html">Khóa học</a></li>
       <li><a class="main_nav" href="">Thông báo</a></li>
-      <li><a class="main_nav" href="../login/index.html">Đăng nhập</a></li>
-      <li><a class="main_nav" href="../register/index.html">Đăng ký</a></li>
+      <li><a class="main_nav" href="../log-in/index.html">Đăng nhập</a></li>
+      <li><a class="main_nav" href="index.html">Đăng ký</a></li>
       <li><img src="../images/no_avata.jfif"></li>
       <li><i class="fas fa-align-justify" id="fas"></i>
         <ul class="sub-menu">
@@ -85,7 +85,4 @@
 <!-- InstanceEndEditable -->
  
 </body>
-<!-- InstanceEnd -->
-<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-<script src="script/script.js"></script>
-</html>
+<!-- InstanceEnd --></html>
