fixed(courses, home)

--- a/Root/IE104.CK/courses/index.html
+++ b/Root/IE104.CK/courses/index.html
@@ -41,9 +41,9 @@
         <div id="html1" class="box"> <img src="../images/html.png">
           <div class="info">
             <h3>Khóa học HTML dành cho người mới</h3>
-            <p> Nguyễn Huy Khoa</p>
-            <p> 844 người đang học</p>
-            <div class="cost"> 444.444đ</div>
+            <p> Phạm Thùy Dung</p>
+            <p> 427148 người đang học</p>
+            <div class="cost"> 446.624đ</div>
           </div>
           <div class=" detail">
             <h3>Bạn có thể học được</h3>
@@ -58,8 +58,8 @@
           <div class="info">
             <h3>Khóa học HTML dành cho người mới</h3>
             <p> Nguyễn Huy Khoa</p>
-            <p> 844 người đang học</p>
-            <div class="cost"> 444.444đ</div>
+            <p> 4385 người đang học</p>
+            <div class="cost"> 859.385đ</div>
           </div>
           <div class=" detail">
             <h3>Bạn có thể học được</h3>
@@ -73,9 +73,9 @@
         <div class="box3"> <img src="../images/html3.jfif">
           <div class="info">
             <h3>Khóa học HTML dành cho người mới</h3>
-            <p> Nguyễn Huy Khoa</p>
-            <p> 844 người đang học</p>
-            <div class="cost"> 444.444đ</div>
+            <p> Vũ Ngọc Triệu</p>
+            <p> 9853 người đang học</p>
+            <div class="cost"> 834.875đ</div>
           </div>
           <div class=" detail">
             <h3>Bạn có thể học được</h3>
@@ -89,7 +89,7 @@
         <div class="box4"> <img src="../images/html4.jfif">
           <div class="info">
             <h3>Khóa học HTML dành cho người mới</h3>
-            <p> Nguyễn Huy Khoa</p>
+            <p> Vũ Văn Sầu Riêng</p>
             <p> 844 người đang học</p>
             <div class="cost"> 444.444đ</div>
           </div>
@@ -110,9 +110,9 @@
         <div class="box"> <img src="../images/css.jfif">
           <div class="info">
             <h3>Khóa học CSS dành cho người mới</h3>
-            <p> Nguyễn Huy Khoa</p>
-            <p> 844 người đang học</p>
-            <div class="cost"> 444.444đ</div>
+            <p> Vũ Văn Sầu Riêng</p>
+            <p> 8758 người đang học</p>
+            <div class="cost"> 375.835đ</div>
           </div>
           <div class="detail">
             <h3>Những gì bạn sẽ học</h3>
@@ -126,9 +126,9 @@
         <div class="box2"> <img src="../images/css2.jfif">
           <div class="info">
             <h3>Khóa học CSS dành cho người mới</h3>
-            <p> Nguyễn Huy Khoa</p>
-            <p> 844 người đang học</p>
-            <div class="cost"> 444.444đ</div>
+            <p> Đào Zăn Bi</p>
+            <p> 8748325 người đang học</p>
+            <div class="cost"> 284.784đ</div>
           </div>
           <div class="detail">
             <h3>Những gì bạn sẽ học</h3>
@@ -142,9 +142,9 @@
         <div class="box3"> <img src="../images/css3.jfif">
           <div class="info">
             <h3>Khóa học CSS dành cho người mới</h3>
-            <p> Nguyễn Huy Khoa</p>
-            <p> 844 người đang học</p>
-            <div class="cost"> 444.444đ</div>
+            <p> Đỗ Thị Ánh</p>
+            <p> 7583 người đang học</p>
+            <div class="cost"> 374.587đ</div>
           </div>
           <div class="detail">
             <h3>Những gì bạn sẽ học</h3>
@@ -158,9 +158,9 @@
         <div class="box4"> <img src="../images/css4.jfif">
           <div class="info">
             <h3>Khóa học CSS dành cho người mới</h3>
-            <p> Nguyễn Huy Khoa</p>
-            <p> 844 người đang học</p>
-            <div class="cost"> 444.444đ</div>
+            <p> Phạm Nhật Vinh</p>
+            <p> 9695 người đang học</p>
+            <div class="cost"> 397.855đ</div>
           </div>
           <div class="detail">
             <h3>Những gì bạn sẽ học</h3>
@@ -179,7 +179,7 @@
         <div class="box"> <img src="../images/js.jfif">
           <div class="info">
             <h3>Khóa học Javascrpit dành cho người mới</h3>
-            <p> Nguyễn Huy Khoa</p>
+            <p> Vũ Văn Sầu Riêng</p>
             <p> 844 người đang học</p>
             <div class="cost"> 444.444đ</div>
           </div>
@@ -195,9 +195,9 @@
         <div class="box2"> <img src="../images/js2.png">
           <div class="info">
             <h3>Khóa học Javascrpit dành cho người mới</h3>
-            <p> Nguyễn Huy Khoa</p>
-            <p> 844 người đang học</p>
-            <div class="cost"> 444.444đ</div>
+            <p> Đỗ Nam Anh</p>
+            <p> 3785 người đang học</p>
+            <div class="cost"> 785.787đ</div>
           </div>
           <div class="detail">
             <h3>Bạn sẽ học được </h3>
@@ -211,9 +211,9 @@
         <div class="box3"> <img src="../images/js3.jfif">
           <div class="info">
             <h3>Khóa học Javascrpit dành cho người mới</h3>
-            <p> Nguyễn Huy Khoa</p>
-            <p> 844 người đang học</p>
-            <div class="cost"> 444.444đ</div>
+            <p> Nguyễn Thị Bí</p>
+            <p> 7358 người đang học</p>
+            <div class="cost"> 395895đ</div>
           </div>
           <div class="detail">
             <h3>Bạn sẽ học được </h3>
@@ -227,7 +227,7 @@
         <div class="box4"> <img src="../images/js4.jfif">
           <div class="info">
             <h3>Khóa học Javascrpit dành cho người mới</h3>
-            <p> Nguyễn Huy Khoa</p>
+            <p> Phạm Văn Bầu</p>
             <p> 844 người đang học</p>
             <div class="cost"> 444.444đ</div>
           </div>
@@ -248,9 +248,9 @@
         <div class="box"> <img src="../images/jquery.png">
           <div class="info">
             <h3>Khóa học jQuery dành cho người mới</h3>
-            <p> Nguyễn Huy Khoa</p>
-            <p> 844 người đang học</p>
-            <div class="cost"> 444.444đ</div>
+            <p> Nguyễn Thị Xoài</p>
+            <p> 9852 người đang học</p>
+            <div class="cost"> 3958825đ</div>
           </div>
           <div class="detail">
             <h3>Bạn sẽ học được </h3>
@@ -264,9 +264,9 @@
         <div class="box2"> <img src="../images/jquery2.png">
           <div class="info">
             <h3>Khóa học jQuery dành cho người mới</h3>
-            <p> Nguyễn Huy Khoa</p>
-            <p> 844 người đang học</p>
-            <div class="cost"> 444.444đ</div>
+            <p> Nguyễn Văn Cam</p>
+            <p> 8358 người đang học</p>
+            <div class="cost"> 348853đ</div>
           </div>
           <div class="detail">
             <h3>Bạn sẽ học được </h3>
@@ -280,9 +280,9 @@
         <div class="box3"> <img src="../images/jquery3.jfif">
           <div class="info">
             <h3>Khóa học jQuery dành cho người mới</h3>
-            <p> Nguyễn Huy Khoa</p>
-            <p> 844 người đang học</p>
-            <div class="cost"> 444.444đ</div>
+            <p> Nguyễn Văn Ổi</p>
+            <p> 8784 người đang học</p>
+            <div class="cost"> 758375đ</div>
           </div>
           <div class="detail">
             <h3>Bạn sẽ học được </h3>
@@ -296,7 +296,7 @@
         <div class="box4"> <img src="../images/jquery4.jfif">
           <div class="info">
             <h3>Khóa học jQuery dành cho người mới</h3>
-            <p> Nguyễn Huy Khoa</p>
+            <p> Huỳnh Thị Mít</p>
             <p> 844 người đang học</p>
             <div class="cost"> 444.444đ</div>
           </div>
@@ -317,7 +317,7 @@
         <div class="box"> <img src="../images/php.png">
           <div class="info">
             <h3>Khóa học PHP dành cho người mới</h3>
-            <p> Nguyễn Huy Khoa</p>
+            <p> Vũ Văn Sầu Riêng</p>
             <p> 844 người đang học</p>
             <div class="cost"> 444.444đ</div>
           </div>
@@ -333,7 +333,7 @@
         <div class="box2"> <img src="../images/php2.jfif">
           <div class="info">
             <h3>Khóa học PHP dành cho người mới</h3>
-            <p> Nguyễn Huy Khoa</p>
+            <p> Vũ Văn Sầu Riêng</p>
             <p> 844 người đang học</p>
             <div class="cost"> 444.444đ </div>
             <div class="detail">
@@ -365,7 +365,7 @@
         <div class="box4"> <img src="../images/php4.jfif">
           <div class="info">
             <h3>Khóa học PHP dành cho người mới</h3>
-            <p> Nguyễn Huy Khoa</p>
+            <p> Vũ Văn Sầu Riêng</p>
             <p> 844 người đang học</p>
             <div class="cost"> 444.444đ</div>
             <div class="detail">
