--- a/Root/IE104.CK/index.html
+++ b/Root/IE104.CK/index.html
@@ -108,7 +108,10 @@
              </div>
             </div>
           </div>
-      <a href="khoahoc/index.html">Thêm nhiều hơn &#62&#62&#62</a> </div>
+          <div style=" text-align:right;border:1px solid #000;width: 200px; float:right;background-color:#FFF; border-radius:20px;">
+            <a href="khoahoc/index.html">Thêm nhiều hơn &#62&#62&#62 </a>
+         </div>
+    </div>
   </div>
 </div>
 <!-- InstanceEndEditable -->
