--- a/Root/IE104.CK/courses/index.html
+++ b/Root/IE104.CK/courses/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
-<html>
-<!-- InstanceBegin template="/Templates/Home_HeaderFooter.dwt" codeOutsideHTMLIsLocked="false" -->
+<html><!-- InstanceBegin template="/Templates/Home_HeaderFooter.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <meta charset="utf-8">
 <!-- InstanceBeginEditable name="doctitle" -->
@@ -21,17 +20,12 @@
       <li><a class="main_nav" href="../index.html">Trang chủ</a></li>
       <li><a class="main_nav" href="index.html">Khóa học</a></li>
       <li><a class="main_nav" href="">Thông báo</a></li>
-      <li><a class="main_nav" href="../log-in/index.html">Đăng nhập</a></li>
-      <li><a class="main_nav" href="../sign-up/index.html">Đăng ký</a></li>
-      <li><img src="../images/no_avata.jfif"></li>
-      <li><i class="fas fa-align-justify" id="fas"></i>
-        <ul class="sub-menu">
-          <li><a href="">cài đặt</a></li>
-        </ul>
-      </li>
+      <li><a class="main_nav" id="log-in" style="color:black" text href="../log-in/index.html">Đăng nhập</a></li>
+      <li><a class="main_nav" id="sign-up" href="../sign-up/index.html">Đăng ký</a></li>
     </ul>
   </nav>
 </header>
+	
 <!-- InstanceBeginEditable name="EditRegion3" -->
 <div id="wrapper">
   <div id="header">
@@ -383,6 +377,7 @@
   </div>
 </div>
 <!-- InstanceEndEditable -->
+	
 <footer class="footer">
   <div class="footer1"> <img src="../images/logo.png">
     <div class="content1">
@@ -435,5 +430,4 @@
 <!-- InstanceBeginEditable name="script" -->
 <script src="js/script.js"></script>
 <!-- InstanceEndEditable -->
-<!-- InstanceEnd -->
-</html>
+<!-- InstanceEnd --></html>
