--- a/Root/IE104.CK/index.html
+++ b/Root/IE104.CK/index.html
@@ -20,14 +20,8 @@
       <li><a class="main_nav" href="index.html">Trang chủ</a></li>
       <li><a class="main_nav" href="courses/index.html">Khóa học</a></li>
       <li><a class="main_nav" href="">Thông báo</a></li>
-      <li><a class="main_nav" href="log-in/index.html">Đăng nhập</a></li>
-      <li><a class="main_nav" href="sign-up/index.html">Đăng ký</a></li>
-      <li><img src="images/no_avata.jfif"></li>
-      <li><i class="fas fa-align-justify" id="fas"></i>
-        <ul class="sub-menu">
-          <li><a href="">cài đặt</a></li>
-        </ul>
-      </li>
+      <li><a class="main_nav" id="log-in" style="color:black" text href="log-in/index.html">Đăng nhập</a></li>
+      <li><a class="main_nav" id="sign-up" href="sign-up/index.html">Đăng ký</a></li>
     </ul>
   </nav>
 </header>
