--- a/Root/IE104.CK/courses/index.html
+++ b/Root/IE104.CK/courses/index.html
@@ -37,7 +37,7 @@
   <div id="header">
     <div class="courses-group">
       <div id="html">
-        <p> Các lớp học HTML</p>
+        <h2 style=" color:#ff2f39a6; font-family:'Palatino Linotype', 'Book Antiqua', Palatino, serif; font-size:xx-large;"> Các lớp học HTML</h2>
         <div id="html1" class="box"> <img src="../images/html.png">
           <div class="info">
             <h3>Khóa học HTML dành cho người mới</h3>
@@ -106,7 +106,7 @@
     </div>
     <div class="courses-group">
       <div  id="css">
-        <p> Các lớp học CSS</p>
+        <h2 style=" color:#ff2f39a6; font-family:'Palatino Linotype', 'Book Antiqua', Palatino, serif; font-size:xx-large;"> Các lớp học CSS</h2>
         <div class="box"> <img src="../images/css.jfif">
           <div class="info">
             <h3>Khóa học CSS dành cho người mới</h3>
@@ -175,7 +175,7 @@
     </div>
     <div class="courses-group">
       <div id="js">
-        <p> Các lớp học JS</p>
+        <h2 style=" color:#ff2f39a6; font-family:'Palatino Linotype', 'Book Antiqua', Palatino, serif; font-size:xx-large;"> Các lớp học JS</h2>
         <div class="box"> <img src="../images/js.jfif">
           <div class="info">
             <h3>Khóa học Javascrpit dành cho người mới</h3>
@@ -244,7 +244,7 @@
     </div>
     <div class="courses-group">
       <div id="jquery">
-        <p> Các lớp học Jquery</p>
+        <h2 style=" color:#ff2f39a6; font-family:'Palatino Linotype', 'Book Antiqua', Palatino, serif; font-size:xx-large;"> Các lớp học Jquery</h2>
         <div class="box"> <img src="../images/jquery.png">
           <div class="info">
             <h3>Khóa học jQuery dành cho người mới</h3>
@@ -313,7 +313,7 @@
     </div>
     <div class="courses-group">
       <div id="PHP">
-        <p> Các lớp học PHP</p>
+       <h2 style=" color:#ff2f39a6; font-family:'Palatino Linotype', 'Book Antiqua', Palatino, serif; font-size:xx-large;"> Các lớp học PHP</h2>
         <div class="box"> <img src="../images/php.png">
           <div class="info">
             <h3>Khóa học PHP dành cho người mới</h3>
